--- a/src/parsers/nextcloud.yaml
+++ b/src/parsers/nextcloud.yaml
@@ -28,6 +28,7 @@ $schema: https://schemas.humio.com/parser/v0.2.0
 script: |-
   parseJson() |
 
+  // One of the most important visualisations in the Nextcloud package concerns what is being done with folders/files, hence we extract that information into a separate field at ingest time.
   case { message = "File*" | regex("File (?<ncFileOperation>\w+):", field=message); * } |
 
   parseTimestamp(field=time)
