--- a/src/dashboards/SharingActions.yaml
+++ b/src/dashboards/SharingActions.yaml
@@ -9,15 +9,16 @@ widgets:
     x: 0
     y: 0
     description: 'How to read table: at <time> user <X> <shared/unshared> a <file/folder>
-      named <file or folder name> using <share method> whilst located in <country>'
+      named <file or folder name> using <share method> with <group/user> whilst located
+      in <country>'
     height: 9
     queryString: |-
       #type=nextcloud app=admin_audit |
       regex("The (?<ncFsObject>file|folder) \"(?<ncFsObjectName>.*)\" with ID .* has been (?<ncFsAction>shared|unshared) (\(Share ID.*|(via|to the|from the) (?<ncSharingMethod>link|user|group)( |)(|\"(?<ncUser>.*)\") (\(Share ID.*|with permissions \"(?<ncFsPermissions>\d*)\"))", field=message) |
       iplocation(remoteAddr) |
       asn(remoteAddr) |
-      rename(user, as=User) | rename(ncFsAction, as="Sharing action") | rename(ncFsObject, as="Files system object") | rename(ncFsObjectName, as="Folder/file name") | rename(ncSharingMethod, as="Sharing method") | rename(remoteAddr.country, as=Country) | rename(remoteAddr.org, as="IP Org.") |
-      select([@timestamp,User,"Sharing action","Files system object","Folder/file name","Sharing method",Country,"IP Org."])
+      rename(user, as=User) | rename(ncFsAction, as="Sharing action") | rename(ncFsObject, as="File system object") | rename(ncFsObjectName, as="Folder/file name") | rename(ncSharingMethod, as="Sharing method") | rename(ncUser, as="Shared with Group/User") | rename(remoteAddr.country, as=Country) | rename(remoteAddr.org, as="IP Org.") |
+      select([@timestamp,User,"Sharing action","File system object","Folder/file name","Sharing method","Shared with Group/User",Country,"IP Org."])
     visualization: table-view
     end: now
     start: 7d
